Keras model achieves 20% accuracy in 10 epochs against 12 classes

--- a/Collect Data-Copy1.ipynb
+++ b/Collect Data-Copy1.ipynb
@@ -140,7 +140,177 @@
       "Getting track features for spotify:playlist:37i9dQZF1DX5622XLsm5RS in DK\n",
       "Getting track features for spotify:playlist:37i9dQZF1DX1jpbl6jf4NJ in DK\n",
       "Getting track features for spotify:playlist:37i9dQZF1DX6ThoxooFoGK in DK\n",
-      "Getting track features for spotify:playlist:37i9dQZF1DX9XiAcF7t1s5 in DK\n"
+      "Getting track features for spotify:playlist:37i9dQZF1DX9XiAcF7t1s5 in DK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5FSdyF5hIEH in DK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4zhmwjdK3k8 in DK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdhDukKQ88Cc in DK\n",
+      "EE has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4xuWVBs4FgJ in EE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX6GwdWRQMQpq in EE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX82pCGH5USnM in EE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWY4xHQp97fN6 in EE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9XIFQuFvzM4 in EE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbYM3nMM0oPk in EE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1rVvRgjX59F in EE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcBWIGoYBM5M in EE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTJ7xPn4vNaz in EE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTwnEm1IYyoj in EE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4TnpT6vw5rE in EE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTDafB3skWPN in EE\n",
+      "FI has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWV96Iq4G3Mhu in FI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX6zD0JOgpPBS in FI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXb4kyobHh5lc in FI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWWGQ7SVOS3vk in FI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXa08SFNyIlN8 in FI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTw1ORfckhDu in FI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdJFpsr4Sn91 in FI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX64Cx4vTeaRB in FI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUvzPS8uIABd in FI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWXVBw4Z7cIDC in FI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX8sjRUtu4bjr in FI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX8txPsVVyl0W in FI\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FR has 10 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWY6UWUOwj4BO in FR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYRdd9noPgqB in FR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWSBZhfF4ZHr8 in FR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWVuV87wUBNwc in FR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWVPRVPGc4ZVv in FR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX2clypTgBmEw in FR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbS5WTN5nKF7 in FR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9ND1QF5hZNF in FR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4JTjLTaIQbE in FR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1X23oiQRTB5 in FR\n",
+      "DE has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaIrEwuQ3hyy in DE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX07Bg0Q5GozA in DE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX52oZiy8mdjZ in DE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYUYYlhkTuEn in DE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWVgfADJapICT in DE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1htCFhfVtyK in DE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX2lUf1uE6Mre in DE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX8hcTuUCeYxa in DE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWVzZlRWgqAGH in DE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUPH9einijpy in DE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZESE3fHLhmD in DE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX2YSAZIuAiB1 in DE\n",
+      "GR has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4xuWVBs4FgJ in GR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX6GwdWRQMQpq in GR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX82pCGH5USnM in GR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWY4xHQp97fN6 in GR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9XIFQuFvzM4 in GR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbYM3nMM0oPk in GR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1rVvRgjX59F in GR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcBWIGoYBM5M in GR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTJ7xPn4vNaz in GR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTwnEm1IYyoj in GR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4TnpT6vw5rE in GR\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTDafB3skWPN in GR\n",
+      "HU has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4xuWVBs4FgJ in HU\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX6GwdWRQMQpq in HU\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX82pCGH5USnM in HU\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWY4xHQp97fN6 in HU\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9XIFQuFvzM4 in HU\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbYM3nMM0oPk in HU\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1rVvRgjX59F in HU\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcBWIGoYBM5M in HU\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTJ7xPn4vNaz in HU\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTwnEm1IYyoj in HU\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4TnpT6vw5rE in HU\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTDafB3skWPN in HU\n",
+      "IS has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX10TVEYtDSXi in IS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdLiIgdzcFNk in IS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX6RV1avkEs6h in IS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4mkchysouYb in IS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4WYpdgoIcn6 in IS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZeKCadgRdKQ in IS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0XUsuxWHRQd in IS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX76Wlfdnj7AP in IS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4sWSpwq3LiO in IS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdPec7aLTmlC in IS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWSqmBTGDYngZ in IS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX7KNKjOK0o75 in IS\n",
+      "IE has 10 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUu64dvFdPQk in IE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4a0nQYnltiQ in IE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX2czWA9hqErK in IE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0TrWIhtmeqJ in IE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1tW4VlEfDSS in IE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWSqPHam7LOqC in IE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWX9mGYsaqc7V in IE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXazOBCyyv15E in IE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYtg7TV07mgz in IE\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWSOkubnsDCSS in IE\n",
+      "IT has 10 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX37pZLd58ED5 in IT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWX21Ue9Rttn8 in IT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcBWIGoYBM5M in IT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0jgyAiPl8Af in IT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1B66JszkkWR in IT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdHKb3VkLtuj in IT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUv0cTKdT8jJ in IT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX3EvTrESVmN6 in IT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWWavShqgIPsw in IT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX2TRYkJECvfC in IT\n",
+      "LV has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcWBRiUaG3o5 in LV\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWU0ScTcjJBdj in LV\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZwtERXCS82H in LV\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX8Kgdykz6OKj in LV\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbcgQ8d7s0A0 in LV\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX7rOY2tZUw1k in LV\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4pUKG1kS0Ac in LV\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX82pCGH5USnM in LV\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZ0OzPeadl0h in LV\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0Aaer4Jzfgm in LV\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4UtSsGT1Sbe in LV\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5IDTimEWoTd in LV\n",
+      "LI has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcWBRiUaG3o5 in LI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWU0ScTcjJBdj in LI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZwtERXCS82H in LI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX8Kgdykz6OKj in LI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbcgQ8d7s0A0 in LI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX7rOY2tZUw1k in LI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4pUKG1kS0Ac in LI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX82pCGH5USnM in LI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZ0OzPeadl0h in LI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0Aaer4Jzfgm in LI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4UtSsGT1Sbe in LI\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5IDTimEWoTd in LI\n",
+      "LT has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcWBRiUaG3o5 in LT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWU0ScTcjJBdj in LT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZwtERXCS82H in LT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX8Kgdykz6OKj in LT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbcgQ8d7s0A0 in LT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX7rOY2tZUw1k in LT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4pUKG1kS0Ac in LT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX82pCGH5USnM in LT\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting track features for spotify:playlist:37i9dQZF1DWZ0OzPeadl0h in LT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0Aaer4Jzfgm in LT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4UtSsGT1Sbe in LT\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5IDTimEWoTd in LT\n",
+      "LU has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcWBRiUaG3o5 in LU\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWU0ScTcjJBdj in LU\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZwtERXCS82H in LU\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX8Kgdykz6OKj in LU\n"
      ]
     }
    ],
