--- a/Collect Data.ipynb
+++ b/Collect Data.ipynb
@@ -155,7 +155,205 @@
       "Getting track features for spotify:playlist:37i9dQZF1DX2nX8HgBDmgL in BH\n",
       "Getting track features for spotify:playlist:37i9dQZF1DXaDry6yZJJeW in BH\n",
       "Getting track features for spotify:playlist:37i9dQZF1DXaHuo0R6jTxZ in BH\n",
-      "Getting track features for spotify:playlist:37i9dQZF1DWUQM3rmTXpBR in BH\n"
+      "Getting track features for spotify:playlist:37i9dQZF1DWUQM3rmTXpBR in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdcjKKBPqh1t in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXe3aCmUoBd8n in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTTCCEjVC99N in BH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUxHPh2rEiHr in BH\n",
+      "HK has 13 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdGUQjVlqY2Q in HK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX7HGyCQ2dcNx in HK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4UYQxwfbtyk in HK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWVImURhejvlp in HK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9tPFwDMOaN1 in HK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX54hVmopd3Yt in HK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0DSW3sGhRwk in HK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbVmhQBDSKS7 in HK\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting track features for spotify:playlist:37i9dQZF1DX9Sg2GTUELDO in HK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0x36cwEyOTG in HK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWT1y71ZcMPe5 in HK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWX83CujKHHOn in HK\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4WYpdgoIcn6 in HK\n",
+      "IN has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4xuWVBs4FgJ in IN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX6GwdWRQMQpq in IN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX82pCGH5USnM in IN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWY4xHQp97fN6 in IN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX9XIFQuFvzM4 in IN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbYM3nMM0oPk in IN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1rVvRgjX59F in IN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcBWIGoYBM5M in IN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTJ7xPn4vNaz in IN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTwnEm1IYyoj in IN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4TnpT6vw5rE in IN\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTDafB3skWPN in IN\n",
+      "ID has 11 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZxM58TRkuqg in ID\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXa2EiKmMLhFD in ID\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZrhFFq3bnGV in ID\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXd82NU5rAcTZ in ID\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWY8Ogms1X39p in ID\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWXML2LendtLJ in ID\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcA6dRp8rwj6 in ID\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXat64iiQuzjo in ID\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaz7CcPuNVXF in ID\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX7i7SKKuAK4o in ID\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWT1y71ZcMPe5 in ID\n",
+      "IL has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUwysBvzNPRZ in IL\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWT9L7hoCDtjB in IL\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0lMAi3ewvg4 in IL\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX8PTcvzNjxYK in IL\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdmWiWhAYJ4a in IL\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWV9KyA92twJc in IL\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX6fU3XFR1vqF in IL\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX7Mc5eu3d1jD in IL\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYbUY40ZDAwb in IL\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWSYF6geMtQMW in IL\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcXpkHQIToU1 in IL\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX03sMCBmF7Dm in IL\n",
+      "JP has 10 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0ciAAyw9ZkU in JP\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYBDycFJuxRt in JP\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXbPWdR4IOz73 in JP\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdlIfJyrTMuL in JP\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0pBYcA3qddJ in JP\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX3qCx5yEZkcJ in JP\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXa71eg5j9dKZ in JP\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4KVW02Geer9 in JP\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWXX3HHYIWJwh in JP\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4OR8pnFkwhR in JP\n",
+      "JO has 15 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYHBENPjyDpc in JO\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWU486KSiznWZ in JO\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXe3aCmUoBd8n in JO\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0ysO3y1BFXN in JO\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5cO1uP1XC1g in JO\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1fzTwl8xjJf in JO\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4rmnjMBxfCv in JO\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaHuo0R6jTxZ in JO\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXd43GfSFAeHA in JO\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaFm6IhSHlyi in JO\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUQM3rmTXpBR in JO\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdcjKKBPqh1t in JO\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXd3AhRYJnfcl in JO\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTTCCEjVC99N in JO\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0s5kDXi1oC5 in JO\n",
+      "KW has 20 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWWgW3m1g7KmT in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZKucvJjqs4a in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdj3JotSexPH in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWU486KSiznWZ in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTvNyxOwkztu in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXd3AhRYJnfcl in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0ysO3y1BFXN in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5cO1uP1XC1g in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1fzTwl8xjJf in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5BeS7oLnHFo in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4rmnjMBxfCv in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYFV1CnuXO8v in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX2nX8HgBDmgL in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaDry6yZJJeW in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaHuo0R6jTxZ in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUQM3rmTXpBR in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdcjKKBPqh1t in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXe3aCmUoBd8n in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTTCCEjVC99N in KW\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUxHPh2rEiHr in KW\n",
+      "LB has 15 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYHBENPjyDpc in LB\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXe3aCmUoBd8n in LB\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYFV1CnuXO8v in LB\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5cO1uP1XC1g in LB\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXa7FSukIBTlS in LB\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZKucvJjqs4a in LB\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaGui85Swluy in LB\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX2siSxlNkZrf in LB\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4rmnjMBxfCv in LB\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaHuo0R6jTxZ in LB\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUQM3rmTXpBR in LB\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXd3AhRYJnfcl in LB\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5lckay3OqOG in LB\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX7Gwi28HhdBP in LB\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcC6YLqj8ET8 in LB\n",
+      "MY has 15 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdPec7aLTmlC in MY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX1N5uK98ms5p in MY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5IDTimEWoTd in MY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWWuGaVZsglfu in MY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWVqfgj8NZEp1 in MY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXb1RLKxkHZ77 in MY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWSWgIT7hDCRM in MY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4dyzvuaRJ0n in MY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX6IdgnkXHL4C in MY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXayb37p8Vuer in MY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0aB3wt1nHwX in MY\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting track features for spotify:playlist:37i9dQZF1DWY8U6Zq7nvbE in MY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX0s5kDXi1oC5 in MY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcA6dRp8rwj6 in MY\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX3Ogo9pFvBkY in MY\n",
+      "OM has 18 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWWgW3m1g7KmT in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX905nNo3hBpt in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5lckay3OqOG in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX2siSxlNkZrf in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWU486KSiznWZ in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaFm6IhSHlyi in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXd3AhRYJnfcl in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXa7FSukIBTlS in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5cO1uP1XC1g in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXdcjKKBPqh1t in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXe3aCmUoBd8n in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTwzVdyRpXm1 in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX7Gwi28HhdBP in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUQM3rmTXpBR in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWWhuJcTXO5hW in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX8DbV65q7h3u in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWTTCCEjVC99N in OM\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZKucvJjqs4a in OM\n",
+      "PS has 15 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYHBENPjyDpc in PS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXe3aCmUoBd8n in PS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWYFV1CnuXO8v in PS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5cO1uP1XC1g in PS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXa7FSukIBTlS in PS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZKucvJjqs4a in PS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaGui85Swluy in PS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX2siSxlNkZrf in PS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4rmnjMBxfCv in PS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXaHuo0R6jTxZ in PS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWUQM3rmTXpBR in PS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXd3AhRYJnfcl in PS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5lckay3OqOG in PS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX7Gwi28HhdBP in PS\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcC6YLqj8ET8 in PS\n",
+      "PH has 12 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DXcZQSjptOQtk in PH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX12Zn55QZM3w in PH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX8W9EFn0yyjF in PH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWX9VXBLRgDqu in PH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWSjwScXt3ScZ in PH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX5g856aiKiDS in PH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX4sWSpwq3LiO in PH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX6oLdwrroY56 in PH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWZd79rJ6a7lp in PH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWSVQreDCvFMf in PH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DX8f6LHxMjnzD in PH\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWT4GbvSrNWS6 in PH\n",
+      "QA has 18 playlists\n",
+      "Getting track features for spotify:playlist:37i9dQZF1DWWgW3m1g7KmT in QA\n"
      ]
     }
    ],
