--- a/Generalized LSTM - Keras.ipynb
+++ b/Generalized LSTM - Keras.ipynb
@@ -182,14 +182,16 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "lstm_1 (LSTM)                (None, 200, 50)           15600     \n",
+      "lstm_1 (LSTM)                (None, 200, 100)          51200     \n",
       "_________________________________________________________________\n",
-      "lstm_2 (LSTM)                (None, 50)                20200     \n",
+      "lstm_2 (LSTM)                (None, 50)                30200     \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 12)                612       \n",
+      "dense_1 (Dense)              (None, 20)                1020      \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 12)                252       \n",
       "=================================================================\n",
-      "Total params: 36,412\n",
-      "Trainable params: 36,412\n",
+      "Total params: 82,672\n",
+      "Trainable params: 82,672\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n"
@@ -199,9 +201,14 @@
    "source": [
     "out_index = 2\n",
     "model = keras.Sequential()\n",
-    "model.add(LSTM(50, input_shape=(train_x.shape[1], train_x.shape[2]), return_sequences = True))\n",
-    "model.add(LSTM(50, input_shape=(train_x.shape[1], train_x.shape[2]), dropout=.5))\n",
-    "#model.add(Dense(200, activation= \"relu\"))\n",
+    "model.add(LSTM(100, \n",
+    "               input_shape=(train_x.shape[1], train_x.shape[2]), \n",
+    "               return_sequences = True,\n",
+    "              recurrent_dropout = .25))\n",
+    "model.add(LSTM(50, \n",
+    "               input_shape=(train_x.shape[1], train_x.shape[2]),\n",
+    "              recurrent_dropout = .25))\n",
+    "model.add(Dense(20, activation= \"relu\"))\n",
     "#model.add(keras.layers.Dropout(.25))\n",
     "model.add(Dense(len(enc.categories_[0]), activation= \"softmax\"))\n",
     "model.compile(loss = \"categorical_crossentropy\", optimizer= \"adam\", metrics=[\"acc\"])\n",
@@ -329,16 +336,73 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:plaidml:Analyzing Ops: 1988 of 40247 operations complete\n",
-      "INFO:plaidml:Analyzing Ops: 4980 of 40247 operations complete\n",
-      "INFO:plaidml:Analyzing Ops: 8891 of 40247 operations complete\n",
-      "INFO:plaidml:Analyzing Ops: 11747 of 40247 operations complete\n",
-      "INFO:plaidml:Analyzing Ops: 15701 of 40247 operations complete\n",
-      "INFO:plaidml:Analyzing Ops: 21195 of 40247 operations complete\n",
-      "INFO:plaidml:Analyzing Ops: 25882 of 40247 operations complete\n",
-      "INFO:plaidml:Analyzing Ops: 32509 of 40247 operations complete\n",
-      "INFO:plaidml:Analyzing Ops: 35273 of 40247 operations complete\n",
-      "INFO:plaidml:Analyzing Ops: 39136 of 40247 operations complete\n"
+      "INFO:plaidml:Analyzing Ops: 1551 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 3245 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 5345 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 8621 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 10716 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 12793 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 15532 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 19895 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 24728 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 29791 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 34559 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 38198 of 41898 operations complete\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24320/24445 [============================>.] - ETA: 3s - loss: 2.3759 - acc: 0.1547 "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:plaidml:Analyzing Ops: 1229 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 2993 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 5208 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 8652 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 10831 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 12900 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 15493 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 19523 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 24343 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 29209 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 34226 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 37796 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 40783 of 41898 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 3798 of 17103 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 8786 of 17103 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 13427 of 17103 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 4230 of 17103 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 8879 of 17103 operations complete\n",
+      "INFO:plaidml:Analyzing Ops: 13544 of 17103 operations complete\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24445/24445 [==============================] - 1033s 42ms/step - loss: 2.3754 - acc: 0.1552 - val_loss: 2.3251 - val_acc: 0.1749\n",
+      "Epoch 2/50\n",
+      "24445/24445 [==============================] - 576s 24ms/step - loss: 2.3312 - acc: 0.1799 - val_loss: 2.2804 - val_acc: 0.2081\n",
+      "Epoch 3/50\n",
+      "24445/24445 [==============================] - 590s 24ms/step - loss: 2.3097 - acc: 0.1953 - val_loss: 2.2632 - val_acc: 0.2120\n",
+      "Epoch 4/50\n",
+      "24445/24445 [==============================] - 601s 25ms/step - loss: 2.2875 - acc: 0.2004 - val_loss: 2.2932 - val_acc: 0.2120\n",
+      "Epoch 5/50\n",
+      "24445/24445 [==============================] - 610s 25ms/step - loss: 2.2665 - acc: 0.2082 - val_loss: 2.2390 - val_acc: 0.2212\n",
+      "Epoch 6/50\n",
+      "24445/24445 [==============================] - 614s 25ms/step - loss: 2.2638 - acc: 0.2088 - val_loss: 2.2739 - val_acc: 0.2067\n",
+      "Epoch 7/50\n",
+      "24445/24445 [==============================] - 679s 28ms/step - loss: 2.2716 - acc: 0.2045 - val_loss: 2.2340 - val_acc: 0.2193\n",
+      "Epoch 8/50\n",
+      "24445/24445 [==============================] - 644s 26ms/step - loss: 2.2569 - acc: 0.2084 - val_loss: 2.2380 - val_acc: 0.2316\n",
+      "Epoch 9/50\n",
+      "22784/24445 [==========================>...] - ETA: 51s - loss: 2.2516 - acc: 0.2098"
      ]
     }
    ],
@@ -347,7 +411,7 @@
     "          epochs = 50, \n",
     "          shuffle = True,\n",
     "          validation_data = (val_x, val_labels),\n",
-    "          batch_size = 512,\n",
+    "          batch_size = 256,\n",
     "          class_weight=class_weights)"
    ]
   },
