Added Presentation 1 list

--- a/Descriptive stats.ipynb
+++ b/Descriptive stats.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "aggregate   13182.0        403.0       839.503490  0:03:48.753002"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,6 +199,31 @@
     "# Mean number of segments over tracks\n",
     "# Mean duration over tracks\n",
     "# Within each country and across all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['start', 'duration', 'confidence', 'loudness_start',\n",
+       "       'loudness_max_time', 'loudness_max', 'p1', 'p2', 'p3', 'p4', 'p5', 'p6',\n",
+       "       'p7', 'p8', 'p9', 'p10', 'p11', 'p12', 't1', 't2', 't3', 't4', 't5',\n",
+       "       't6', 't7', 't8', 't9', 't10', 't11', 't12', 'track_id', 'Country',\n",
+       "       'Year', 'Playlist'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comb_data.columns"
    ]
   },
   {
